--- a/rottenpotatoes/app/views/movies/show.html.haml
+++ b/rottenpotatoes/app/views/movies/show.html.haml
@@ -6,7 +6,7 @@
   %li
     Director:
     = @movie.director
-    = link_to 'Find Movies With Same Director', movies_path(:director => @movie.id)
+    = link_to 'Find Movies With Same Director', director_movie_path(@movie)
   %li
     Rating:
     = @movie.rating
